--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "acorn": "^8.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "cors": "^2.8.5",
+    "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "flask": "^0.2.10",
     "jquery": "^3.5.1",
     "jquery-react": "^1.0.0",
